<resources>
    <string name="app_name">VM_Drone</string>

    <string name="Visual">Visual Mode</string>

    <string name="Voice">Voice Mode</string>

    <string name="location">GPS</string>
    <string name="joystick_enable">Enable Joystick</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="voice_examples">Voice examples</string>
    <string name="voice">Voice</string>
    <string name="add_text">Add text</string>
    <string name="back_navigation_button">back navigation button</string>
    <string name="go_forward">Go Forward</string>
    <string name="land">Land</string>
    <string name="stop">Stop</string>
    <string name="submit">Submit</string>
</resources>