<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/voice_exam_back_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="4dp"
        android:background="@color/light_blue"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/QuickAction_ScrollView"
        android:layout_width="338dp"
        android:layout_height="375dp"
        android:layout_marginBottom="216dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.356"
        app:layout_constraintStart_toStartOf="parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/Stop_Command"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"/>
            <Button
                android:id="@+id/Land_Command"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/land"/>
            <Button
                android:id="@+id/GoForward_Command"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_forward"/>

        </LinearLayout>




        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>